2005-11-02 Braden McDaniel  <braden@endoframe.com>

	Added bits missing for sfdouble, mfdouble, sfvec2d, mfvec2d,
	sfvec3d, and mfvec3d.

	* src/libopenvrml/openvrml/event.cpp:  Added missing doc-
	comments.
	* src/libopenvrml/openvrml/field_value.cpp:  Added missing doc-
	comments.
	* src/libopenvrml/openvrml/field_value.h:  Added specializations
	of std::swap for sfdouble, mfdouble, sfvec2d, mfvec2d, sfvec3d,
	and mfvec3d.
	* src/libopenvrml/openvrml/node_impl_util.cpp:  Added missing
	doc-comments.
	* src/libopenvrml/openvrml/node_impl_util.h:  Added missing
	typedefs for abstract_node event_emitters.

2005-11-02 Braden McDaniel  <braden@endoframe.com>

	Doc-comment improvements.

	* src/libopenvrml/openvrml/field_value.cpp
	* src/libopenvrml/openvrml/node.cpp

2005-11-02 Braden McDaniel  <braden@endoframe.com>

	field_value's reference-counted value object needs to be
	protected by a mutex.

	* src/libopenvrml/openvrml/field_value.cpp
	* src/libopenvrml/openvrml/field_value.h

2005-11-02 Braden McDaniel  <braden@endoframe.com>

	Factored node-specific parts of event_listener into their own
	class.  This should accommodate things other than nodes being
	event listeners.

	* src/libopenvrml/openvrml/browser.cpp
	* src/libopenvrml/openvrml/event.cpp
	* src/libopenvrml/openvrml/event.h
	* src/libopenvrml/openvrml/exposedfield.h
	* src/libopenvrml/openvrml/node.cpp
	* src/libopenvrml/openvrml/node_impl_util.cpp
	* src/libopenvrml/openvrml/node_impl_util.h
	* src/libopenvrml/openvrml/script.cpp
	* src/libopenvrml/openvrml/script.h
	* src/libopenvrml/openvrml/vrml97node.cpp

2005-11-01 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/node_impl_util.cpp:  Improved
	documentation for openvrml::node_impl_util namespace.

2005-10-29 Braden McDaniel  <braden@endoframe.com>

	Use an intrusive reference count for nodes instead of node_ptr.
	boost::intrusive_ptr is now used as a smart pointer for nodes.
